// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tabs TabsBody should render  1`] = `
<Tabs__TabPanel
  aria-labelledby="tab-1"
  role="tabpanel"
>
  Children
</Tabs__TabPanel>
`;

exports[`Tabs TabsNav should render 1`] = `
<Tabs__TabList
  aria-label="tab-1"
  role="tablist"
>
  Children
</Tabs__TabList>
`;

exports[`Tabs TabsNavItem should render as active/inactive 1`] = `
<Tabs__TabsItem
  role="presentation"
>
  <Tabs__TabsBtn
    aria-controls="tab-1"
    aria-selected={true}
    onClick={[Function]}
    role="tab"
  >
    Active item
  </Tabs__TabsBtn>
</Tabs__TabsItem>
`;

exports[`Tabs TabsNavItem should render as active/inactive 2`] = `
<Tabs__TabsItem
  role="presentation"
>
  <Tabs__TabsBtn
    aria-controls="tab-1"
    aria-selected={false}
    onClick={[Function]}
    role="tab"
  >
    Inactive item
  </Tabs__TabsBtn>
</Tabs__TabsItem>
`;
